# OpenRace

./: .gitignore  .licenserc.json  404.html  CMakeLists.txt  README.md  conanfile.txt  index.html  search-index.json  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docker.yml  check-pr.yml  clang-format-check.yml  licensecheck.yml  test.yaml
assets/css/: styles.ed0b3173.css
assets/js/: 1.1431b613.js  17896441.6d896336.js  17896441.811aa758.js  18.8635b95f.js  19.7d436941.js  1a4e3797.0ca2b12b.js  1a4e3797.0f1fc6d8.js  1a4e3797.28a77377.js  1a4e3797.36cab43d.js  1a4e3797.6a78e2ee.js  1a4e3797.8112982b.js  1a4e3797.91b470e9.js  1a4e3797.dee89ebe.js  1a4e3797.eda0d38f.js  1a4e3797.eda4b21a.js  1a4e3797.f39bb5ea.js  1be78505.0cf10ab2.js  1be78505.129e6fcc.js  1be78505.1d3fb34e.js  1be78505.4986b7b1.js  1be78505.687cf8a5.js  1be78505.7b199cd4.js  1be78505.918f8be0.js  1be78505.91ac09ad.js  1be78505.b9033d30.js  1be78505.ed6ce7d4.js  1be78505.fa1e7a44.js  1f391b9e.07471c43.js  1f391b9e.335e91a1.js  1f391b9e.3a072cc1.js  1f391b9e.64d82a93.js  1f391b9e.77bfaede.js  1f391b9e.7b6ac48e.js  1f391b9e.a16eb8ad.js  1f391b9e.a1d06e02.js  1f391b9e.abcc7a27.js  1f391b9e.c39f2d7e.js  1f391b9e.ff7ff18b.js  1fccc062.60d7e5cf.js  1fccc062.a7b74207.js  (+69 more)
cmake/: CompilerWarnings.cmake
doc-adding-new-features/: index.html
doc-contribute-to-docs/: index.html
doc-developing/: index.html
doc-hello-world/: index.html
doc-overview/: index.html
doc-pta-arch/: index.html
doc-setup-dev-env/: index.html
doc-style-guide/: index.html
doc-workflow/: index.html
docker/: Dockerfile  Dockerfile.CI
examples/: Makefile  README.md  pi.c  simplethread.c
markdown-page/: index.html
search/: index.html
src/: CMakeLists.txt  RaceDetect.cpp  RaceDetect.h  main.cpp
src/Analysis/: HappensBeforeGraph.cpp  LockSet.cpp  OmpArrayIndex.cpp  OmpArrayIndex.h  OpenMPAnalysis.cpp  OpenMPAnalysis.h  SharedMemory.cpp  SimpleAlias.cpp
src/IR/: Builder.cpp  IR.cpp  IR.h  IRImpls.h
src/LanguageModel/: Intrinsic.cpp  Intrinsic.h  LanguageModeller.h  OpenMP.cpp  OpenMP.h  RaceModel.cpp  RaceModel.h  pthread.cpp  pthread.h
src/PointerAnalysis/: CMDOptions.cpp  PointerAnalysisPass.h
src/PointerAnalysis/Context/: CtxTrait.h  HybridCtx.h  KCallSite.h  KOrigin.h  NoCtx.h  PtrRingBuffer.h
src/PointerAnalysis/Graph/: CallGraph.h
src/PointerAnalysis/Graph/ConstraintGraph/: CGNodeBase.h  CGObjNode.h  CGPtrNode.h  CGSuperNode.h  ConstraintGraph.h  SCCIterator.h
src/PointerAnalysis/Graph/GraphBase/: GraphBase.h
src/PointerAnalysis/Models/LanguageModel/: ConsGraphBuilder.h  InterceptResult.h  LangModelBase.h  LangModelTrait.h  PtrNodeManager.h
src/PointerAnalysis/Models/MemoryModel/: Canonicalizer.cpp  DefaultHeapModel.cpp  DefaultHeapModel.h  MemModelTrait.h
src/PointerAnalysis/Program/: AllocSite.h  CallSite.cpp  CallSite.h  CtxFunction.h  CtxModule.h  Object.h  Pointer.h  Program.cpp
src/PointerAnalysis/Solver/: Andersen.h  AndersenWave.h  PartialUpdateSolver.h  PointsToSet.cpp  SolverBase.h
src/PointerAnalysis/Solver/PointsTo/: BitVectorPTS.h  PTSTrait.h  PointedByPts.h
src/PointerAnalysis/Util/: CtxInstVisitor.h  GraphWriter.h  Iterators.h  SingleInstanceOwner.h  TypeMetaData.h  Util.cpp  Util.h
src/PreProcessing/: PreProcessing.cpp
src/PreProcessing/Passes/: CanonicalizeGEPPass.cpp  CanonicalizeGEPPass.h  DuplicateOpenMPForks.cpp  InsertGlobalCtorCallPass.cpp  InsertGlobalCtorCallPass.h  LoweringMemCpyPass.cpp  LoweringMemCpyPass.h  OMPConstantPropPass.cpp  OMPConstantPropPass.h  RemoveExceptionHandlerPass.cpp  RemoveExceptionHandlerPass.h
src/Reporter/: Reporter.cpp  Reporter.h
src/Trace/: Event.cpp  Event.h  EventImpl.cpp  EventImpl.h  ProgramTrace.cpp  ProgramTrace.h  ThreadTrace.cpp  ThreadTrace.h
tests/: CMakeLists.txt
tests/data/: Makefile
tests/data/integration/dataracebench/: DRB001-antidep1-orig-yes.c  DRB001-antidep1-orig-yes.ll  DRB002-antidep1-var-yes.ll  DRB003-antidep2-orig-yes.ll  DRB004-antidep2-var-yes.ll  DRB005-indirectaccess1-orig-yes.ll  DRB006-indirectaccess2-orig-yes.ll  DRB007-indirectaccess3-orig-yes.ll  DRB008-indirectaccess4-orig-yes.ll  DRB009-lastprivatemissing-orig-yes.ll  DRB010-lastprivatemissing-var-yes.ll  DRB011-minusminus-orig-yes.ll  DRB012-minusminus-var-yes.ll  DRB013-nowait-orig-yes.ll  DRB014-outofbounds-orig-yes.ll  DRB015-outofbounds-var-yes.ll  DRB016-outputdep-orig-yes.ll  DRB017-outputdep-var-yes.ll  DRB018-plusplus-orig-yes.ll  DRB019-plusplus-var-yes.ll  DRB020-privatemissing-var-yes.ll  DRB021-reductionmissing-orig-yes.ll  (+147 more)
tests/helpers/: ReportChecking.cpp  ReportChecking.h
tests/integration/: dataracebench.test.cpp  openmp.test.cpp  pthreadrace.test.cpp
tests/regression/: EmptyThread.test.cpp
tests/unit/Analysis/: HappensBefore.test.cpp  LockSet.test.cpp  OmpArrayIndex.test.cpp  OpenMPAnalysis.test.cpp
tests/unit/IR/: IR.test.cpp  OpenMPIR.test.cpp
tests/unit/PointerAnalysis/: PointerAnalysis.test.cpp
tests/unit/PreProcessing/: DuplicateOpenMPForks.test.cpp
tests/unit/Trace/: OpenMPTrace.test.cpp  Trace.test.cpp
website/: package.json  sidebars.js
website/docs/: doc-adding-new-features.md  doc-contribute-to-docs.md  doc-get-started.md  doc-overview.md  doc-pta-arch.md  doc-setup-dev-env.md
(+292 files in other folders)
